IA fix conductoresInfo on hover word spacing

--- a/biribiritv/src/Components/PalabraSanta/palabraSanta.scss
+++ b/biribiritv/src/Components/PalabraSanta/palabraSanta.scss
@@ -22,6 +22,7 @@
     p {
       font-size: 24px;
       font-weight: bold;
+      word-spacing: 5px;
       position: absolute;
       top: 50%;
       left: 50%;
